# PickCounter

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/: __init__.py  classification.py  cli.py  config.py  core.py  detection.py  io.py  models.py  output.py  pick_counter.py
tests/: __init__.py  test_streamlit_upload_security.py
