[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pick-counter"
version = "1.0.0"
description = "Count guitar picks in images and export results as JSON"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/DOKOS-TAYOS/PickCounter"
Repository = "https://github.com/DOKOS-TAYOS/PickCounter"
"Live App" = "https://pick-counter.streamlit.app/"

[project.optional-dependencies]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pick-counter = "src.pick_counter:main"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
