[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pick-counter"
version = "1.0.0"
description = "Count guitar picks in images and export results as JSON"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.5",
    "opencv-python-headless==4.13.0.92",
    "streamlit==1.57.0",
]

[project.urls]
Homepage = "https://github.com/DOKOS-TAYOS/PickCounter"
Repository = "https://github.com/DOKOS-TAYOS/PickCounter"
"Live App" = "https://pick-counter.streamlit.app/"

[project.optional-dependencies]
dev = ["pip-audit>=2.10.1", "ruff>=0.15.18"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pick-counter = "src.pick_counter:main"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
